--- a/css/custom.css
+++ b/css/custom.css
@@ -75,7 +75,8 @@
 }
 
 .bgwidth {
-	width: 100%;
+	width: auto;
+	height: auto;
 }
 
 .firstWrapper {
@@ -89,7 +90,7 @@
 	background-color: transparent;
 	background-color: transparent;
 	width: 100%;
-	height: 90%;
+	height: 70%;
 	/*margin-left: auto;*/
 	/*margin-right: auto;*/
 	margin-top: 0;
