--- a/css/custom.css
+++ b/css/custom.css
@@ -571,8 +571,12 @@ body {
 	}
 		
 	.bannerText {
-		top: 2%;
+		top: 1%;
 		padding: 3px 0 3px;
+	}
+	
+	.stickyPadding {
+		padding-top: 5px;
 	}
 	
 } /* Define mobile styles */
@@ -608,8 +612,12 @@ body {
 	}
 		
 	.bannerText {
-		/*top: 8%;*/
+		top: 5%;
 		padding: 3px 0 3px;
+	}
+	
+	.stickyPadding {
+		padding-top: 5px;
 	}
 	
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
@@ -652,7 +660,7 @@ body {
 	}
 	
 	.bannerText {
-		/*top: 5%;*/
+		top: 5%;
 		padding: 15px 0 15px;
 	}
 
@@ -673,7 +681,7 @@ body {
 
 /*###################################
 ##  15 Top Bar Spy                 ##
-##################################### */
+##################################### 
 
 #top-menu {
     position: inherit;
@@ -706,7 +714,28 @@ body {
 
 		#top-menu a:hover {
 			color: #454e64;
-		}
+		} */
+
+.top-bar.expanded .title-area {
+	background: transparent;
+}
+
+.top-bar-section ul li.active {
+	background: #454e64;
+	border-top: 3px solid white;
+}
+		
+.top-bar-section ul li.active>a:hover {
+	background: #454e64;
+	border-top: 0px solid #454e64;
+}
+
+.top-bar-section ul li:hover>a {
+	background: #454e64;
+	border-top: 3px solid #454e64;
+	color: #fff;
+	font-weight: bold;
+}
 
 /* ===============
  Appendix:   ALL: IE Fixes
