--- a/css/custom.css
+++ b/css/custom.css
@@ -445,6 +445,10 @@ body {
 	padding-left:21px;
 }
 
+.panel {
+	border-style: none;
+}
+
 /*###################################
 ##  12. $Footer div                 ##
 ##################################### */
@@ -647,6 +651,10 @@ body {
 		padding-top: 5px;
 	}
 	
+	.panel {
+		display: none;
+	}
+	
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
 /* // Medium screens */
@@ -660,6 +668,7 @@ body {
 	.top-bar-section li:not(.has-form) a:not(.button):hover {
 		background: transparent;
 	}
+	
 } /* min-width 641px, medium screens */
 
 @media only screen and (min-width: 40.063em) and (max-width: 64em) { 
@@ -689,6 +698,11 @@ body {
 	.bannerText {
 		top: 5%;
 		padding: 15px 0 15px;
+	}
+	
+	.panel {
+		width: 30%;
+		margin: 0 auto;
 	}
 
 } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
