--- a/css/custom.css
+++ b/css/custom.css
@@ -154,6 +154,19 @@
 	vertical-align: middle !important;
 }
 
+.skillsDiv {
+	/*background: url("../img/bg11.jpg") no-repeat center top transparent;*/
+	background-color: rgb(54,125,125);
+	background-color: rgba(54,125,125,0.8);
+	width: 100%;
+	/*height:945px;*/
+	background-attachment: fixed;
+	background-size: 1920px 666px;
+	padding-top: 3%;
+	padding-bottom: 3%;
+	margin-bottom: 10px;
+}
+
 /*###################################
 ##  2. Chapter title centering style ##
 ##################################### */
