--- a/css/custom.css
+++ b/css/custom.css
@@ -159,7 +159,6 @@
 	/*height:945px;
 	background-attachment: fixed;
 	background-size: 1920px 666px;*/
-	padding-top: 3%;
 	padding-bottom: 3%;
 	margin-bottom: 10px;
 }
@@ -168,7 +167,6 @@
 	background-color: rgb(1,193,255);
 	background-color: rgba(1,193,255,0.8);
 	width: 100%;
-	padding-top: 3%;
 	padding-bottom: 3%;
 }
 
@@ -283,6 +281,7 @@
 ##  7. Custom fonts ##
 ##################################### */
 
+/*
 @font-face {
     font-family: 'aaarghnormal';
     src: url('../aaargh_normal_macroman/Aaargh-webfont.eot');
@@ -305,7 +304,7 @@
     font-weight: normal;
     font-style: normal;
 
-}
+} */
 
 @font-face {
   font-family: 'Sintony';
