--- a/css/custom.css
+++ b/css/custom.css
@@ -151,6 +151,11 @@
 	vertical-align: middle !important;
 }
 
+.smallSpace {
+	padding-left: 25px;
+	vertical-align: middle;
+}
+
 .darkBlueDiv {
 	/*background: url("../img/bg11.jpg") no-repeat center top transparent;*/
 	background-color: rgb(0,61,125);
@@ -160,7 +165,6 @@
 	background-attachment: fixed;
 	background-size: 1920px 666px;*/
 	padding-bottom: 3%;
-	margin-bottom: 10px;
 }
 
 .lightBlueDiv {
@@ -197,7 +201,7 @@
 }
 
 .customSpacing {	
-	padding: 20px; 
+	padding: 17px; 
 }
 
 .noPadding {
@@ -205,16 +209,20 @@
 }
 
 .customFirstHeadTitlesSpacing {
-	padding-top: 49px;
+	padding-top: 47px;
 }
 
 .customHeadTitlesSpacing {
-	padding-top: 24px;
-	padding-bottom: 24px;
+	padding-top: 29px;
 }
 
 .customElementLeftPadding {
 	padding-left: 20px;
+}
+
+.extra-padding {
+	padding-top: 2%;
+	padding-bottom: 3%;
 }
 
 .row {
@@ -257,10 +265,14 @@
 
 .shadow {
 	box-shadow: 10px 10px 5px #888888;
+	-webkit-box-shadow: 10px 10px 5px #888888;
+	-moz-box-shadow: 10px 10px 5px #888888;
 }
 
 .bearlyShadow {
 	box-shadow: 3px 3px 2px #888888;
+	-webkit-box-shadow: 3px 3px 2px #888888;
+	-moz-box-shadow: 3px 3px 2px #888888;
 }
 
 .thumbIcon:hover, .thumbIcon:focus {
@@ -525,6 +537,7 @@ body {
 			background-color: rgba(65,146,75,1);
 		}
 
+
 /*###################################
 ##  11 Custom =media queries       ##
 ##################################### */
@@ -616,6 +629,7 @@ body {
 
 /* // Medium screens */
 @media only screen and (min-width: 40.063em) { 
+
 	.top-bar-section li:not(.has-form) a:not(.button) {
 		padding: 0 15px;
 		line-height: 58px;
@@ -659,6 +673,47 @@ body {
 	}
 
 } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
+
+@media only screen and (max-width:1024px) {
+	
+	.tablet-hidden{
+		visibility: hidden;
+		display: none;
+	}
+	
+	.padding-mobile {
+		padding: 15px !important;
+	}
+	
+	.customHeadTitlesSpacing {
+		padding-top: 4px;	
+		padding-bottom: 4px;
+	}
+	
+	.smallSpace {
+		padding-left: 4px;
+	}
+}
+
+@media only screen and (max-width:640px) {
+	
+	.top-bar {
+		margin-bottom: 0;
+		visibility: hidden;
+		display: none;
+	}
+	
+	.f-topbar-fixed {
+		padding-top: 0 !important;
+	}
+}
+
+@media only screen and (min-width:641px) {
+	.desktop-hidden {
+		visibility: hidden;
+		display: none;
+	}
+}
 
 /* // Large screens */
 @media only screen and (min-width: 64.063em) { } /* min-width 1025px, large screens */
